--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,7 @@
   flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
+  /* border-top: 1px solid #120f2e; */
   justify-content: center;
   align-items: center;
 }
@@ -29,7 +30,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #100E24;
   text-decoration: none;
 }
 
