--- a/styles/botonredes.module.css
+++ b/styles/botonredes.module.css
@@ -1,12 +1,12 @@
 .btn-cssbuttons {
-  --btn-color: #120f2ea0;
+  --btn-color: #817F94;
   position: relative;
   padding: 16px 32px;
   font-family: Roboto, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: 700;
+  font-size: 20px;
   line-height: 1;
-  color: white;
+  color: #120f2ea0;
   background: none;
   border: none;
   outline: none;
